@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * The Universal Permissive License (UPL), Version 1.0
@@ -40,14 +40,13 @@
  */
 package org.graalvm.wasm.test.options;
 
-import java.util.Arrays;
 import java.util.List;
 
 public final class WasmTestOptions {
     public static final String WAT_TO_WASM_EXECUTABLE = System.getProperty("wasmtest.watToWasmExecutable");
     public static final String TEST_SOURCE_PATH = System.getProperty("wasmtest.testSourcePath");
     public static final String TEST_FILTER = System.getProperty("wasmtest.testFilter");
-    public static final List<String> DISABLED_TESTS = System.getProperty("wasmtest.disabledTests") == null ? null : Arrays.asList(System.getProperty("wasmtest.disabledTests").split(","));
+    public static final List<String> DISABLED_TESTS = List.of(System.getProperty("wasmtest.disabledTests", "").split(","));
     public static final String LOG_LEVEL = System.getProperty("wasmtest.logLevel");
     public static final String STORE_CONSTANTS_POLICY = System.getProperty("wasmtest.storeConstantsPolicy");
     public static final String OFFICIAL_TESTS_DIR = System.getProperty("wasmtest.officialTestsDir");
